--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "https://maurogomezz.github.io/UnsplashApp",
+  "name": "unsplash-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maurogomezz.github.io/UnsplashApp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
